# trading-bias-detector

./: .env  .env.example  .gitignore  README.md  bun.lockb  docker-compose.yml  eslint.config.js  index.html  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: deploy.yml
backend/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  bias_engine.py  database.py  main.py
backend/app/api/: ai_coach.py  auth.py  bias_analyses.py  chat_messages.py  deps.py  emotional_tags.py  profiles.py  risk_profiles.py  trades.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  bias_analysis.py  chat_message.py  emotional_tag.py  profile.py  risk_profile.py  trade.py  user.py
backend/app/schemas/: auth.py  common.py
docs/: AWS_DEPLOY.md  DEPLOYMENT.md
frontend/: .dockerignore  Dockerfile
frontend/src/components/: AppSidebar.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api.ts  biasDetection.ts
frontend/src/pages/: AICoach.tsx  Auth.tsx  BiasAnalysis.tsx  Dashboard.tsx  EmotionalTracker.tsx  Portfolio.tsx  (+3 more)
src/: App.tsx  index.css  vite-env.d.ts
src/components/: AppLayout.tsx  AppSidebar.tsx  AutoTranslate.tsx  CoachInsightsPanel.tsx  FloatingCoach.tsx
src/hooks/: useAuth.tsx  useLanguage.tsx
src/lib/: aiCoach.ts  biasDetection.ts  coachInsights.ts  format.ts  portfolioInsights.ts  trades.ts  translations.ts
src/pages/: AICoach.tsx  Auth.tsx  BiasAnalysis.tsx  Dashboard.tsx  EmotionalTracker.tsx  Portfolio.tsx  RiskProfile.tsx  Settings.tsx  Trades.tsx  UploadTrades.tsx
supabase/: config.toml
supabase/migrations/: 20260221154051_9d48ab81-d293-4f7f-ab3a-aa0548b647be.sql
trading_datasets/: 0.0_split_data.ipynb  0.1_eda.ipynb  0.2_feature_engineering.ipynb  0.3_baseline_model.ipynb  encoding_map.json
(+10 files in other folders)
