[project]
name = "trading-bias-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.1",
    "huggingface-hub>=1.4.1",
    "langchain>=1.2.10",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "react>=4.3.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.19.0",
    "transformers>=5.2.0",
    "uvicorn>=0.41.0",
    "vadersentiment>=3.3.2",
    "xgboost>=3.2.0",
]
