[project]
name = "trading-bias-backend"
version = "0.1.0"
description = "FastAPI + Polars bias analysis engine for National Bank Bias Detector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "polars>=1.38.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = []

